Add plugin pugbem

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "ISC",
   "author": "Sergey Khmelevskoy <sergey@khmelevskoy.co>",
   "main": "index.js",
-  "engines": { 
-    "node" : ">=10.0.0" 
+  "engines": {
+    "node": ">=10.0.0"
   },
   "scripts": {
     "start": "gulp",
@@ -59,6 +59,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
     "gulp-pug": "^4.0.1",
+    "gulp-pugbem": "^2.2.4",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.1",
