--- a/src/index.yaml
+++ b/src/index.yaml
@@ -2,28 +2,38 @@ ProjectTitle: Project-name
 
 PageList:
 - file: homepage.html
-  ready: 0
+  ready: 75
 - file: sign-in.html
-  ready: 50
+  ready: 75
 - file: sign-up.html
-  ready: 50
+  ready: 75
 - file: forgot.html
-  ready: 50
+  ready: 75
 - file: client-add.html
-  ready: 50
+  ready: 75
 - file: project-add.html
-  ready: 50
+  ready: 75
 - file: project-passport.html
-  ready: 50
+  ready: 75
 - file: project-access.html
-  ready: 0
+  ready: 60
 - file: project-comments.html
-  ready: 0
+  ready: 75
 - file: project-questions.html
   ready: 0
 - file: project-roles.html
-  ready: 0
+  ready: 60
 - file: projects.html
-  ready: 0
+  ready: 75
 - file: project-tasks.html
+  ready: 0
+- file: forms.html
+  ready: 75
+- file: form-add.html
+  ready: 75
+- file: form-passport.html
+  ready: 0
+- file: form-roles.html
+  ready: 0
+- file: form-questions.html
   ready: 0
