refactored projects, removed some libs, fixed body scroll

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "deploy": "gulp build --production && surge --project ./dist --domain ocms2.surge.sh"
   },
   "dependencies": {
-    "aos": "^2.3.4",
     "barba.js": "^1.0.0",
     "gsap": "^2.0.2",
     "jquery": "^3.3.1",
@@ -29,8 +28,7 @@
     "scrollmonitor": "^1.2.4",
     "surge": "^0.20.1",
     "svg4everybody": "^2.1.9",
-    "tippy.js": "^4.3.0",
-    "viewport-units-buggyfill": "^0.6.2"
+    "tippy.js": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
