add sortable js, add chosen select, add create project button, add action dots change/remove, change filter on tasks page

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "autosize": "^4.0.2",
     "barba.js": "^1.0.0",
+    "chosen-js": "^1.8.7",
     "gsap": "^2.0.2",
     "jquery": "^3.3.1",
     "jquery-lazy": "^1.7.10",
@@ -27,6 +28,7 @@
     "magnific-popup": "^1.1.0",
     "picturefill": "^3.0.3",
     "scrollmonitor": "^1.2.4",
+    "sortablejs": "^1.9.0",
     "stickybits": "^3.6.5",
     "surge": "^0.20.1",
     "svg4everybody": "^2.1.9",
